src/main/java/com/example/demo/error/WrongContentFileFormatException.java
package com.example.demo.error;

public class WrongContentFileFormatException extends RuntimeException {
    public WrongContentFileFormatException(String message) {
        super(message);
    }
}
